--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,10 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "socket.io-client": "^1.4.8",
-    "font-awesome": "^4.6.3",
-    "ngmap": "^1.17.3"
+    "sio-client": "sio-client#^1.4.8",
+    "ngmap": "^1.17.3",
+    "components-font-awesome": "^4.6.3",
+    "socket.io-client": "sio-client#^1.4.8"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
