--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "ngmap": "^1.17.3",
     "components-font-awesome": "^4.6.3",
     "socket.io-client": "sio-client#^1.4.8",
-    "angular-bootstrap": "^2.0.1"
+    "angular-bootstrap": "^2.0.1",
+    "jquery-ui": "^1.12.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
