--- a/config/userdata.js.example
+++ b/config/userdata.js.example
@@ -2,7 +2,8 @@
  // YOU CAN GET A KEY HERE: https://developers.google.com/maps/documentation/javascript/get-api-key
  var userInfo = {
  	users: ["username"],
- 	userZoom: true,
+ 	userZoom: false,
+ 	userPath: true,
  	zoom: 16,
  	userFollow: true,
  	gMapsAPIKey: "YOUR_API_KEY_HERE"
