--- a/config/userdata.js.example
+++ b/config/userdata.js.example
@@ -4,11 +4,13 @@
  	users: [{
  	    enable: true,
  	    username: "username1",
+ 	    alias: "FriendlyName1",
  	    socketAddress: "127.0.0.1:4000",
  	    enableSocket: true
  	},{
  	    enable: false,
  	    username: "username2",
+ 	    alias: "FriendlyName2",
  	    socketAddress: "127.0.0.1:5000",
  	    enableSocket: false
  	}],
